src/test/deca/context/invalid/classmethode22.deca
class A{
    int m(){

    }
    int m(int a){
        
    }
}